--- a/main/server/index.yaml
+++ b/main/server/index.yaml
@@ -1,8 +1,8 @@
 openapi: '3.0.0'
 info:
   version: '1.0.0'
-  title: 'Arch Lab Example API'
-  description: Пример API для первого домашнего задания по курсу Архитектура программных систем
+  title: 'Arch API'
+  description: Пример API
 servers:
   - url: http://127.0.0.1
     description: Sample server
